assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Raleway&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
    }

body {
    background-color:whitesmoke;
}

header{
    background-color: green;
    color:white;
}

footer{
    background-color: green;
    color:white;
}

img {
    max-width: 100%;
    height: auto;
  }

